--- a/style.css
+++ b/style.css
@@ -488,6 +488,28 @@ html,body {
 	margin:14px 0;
 }
 
+.productwrapc{
+	width: 200px;
+	height: 400px;
+	background:#e7ebf0;
+	width:100%;
+	padding:7px 7px 150px 7px;
+	border-radius:3px;
+	box-shadow:1px 1px 2px rgba(0,0,0, .2);
+	margin:14px 0;
+}
+
+.productwraptek{
+	width: 200px;
+	height: 200px;
+	background:#e7ebf0;
+	width:100%;
+	padding:7px 7px 150px 7px;
+	border-radius:3px;
+	box-shadow:1px 1px 2px rgba(0,0,0, .2);
+	margin:14px 0;
+}
+
 .pr-img{
 	position:relative;
 }
